manifests/whoami/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    component: whoami
spec:
  replicas: 3
  selector:
    matchLabels:
      component: whoami
  template:
    metadata:
      labels:
        component: whoami
    spec:
      containers:
        - name: whoami
          image: docker.io/containous/whoami:latest
          ports:
            - name: web
              containerPort: 80
