manifests/whoami/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
spec:
  rules:
    - host: 'whoami.localhost'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: whoami-service
                port:
                  name: web
